# lptw

./: .gitignore  CMakeLists.txt  Combinatorics.h  DataParser.cpp  DataParser.h  FindGUROBI.cmake  Graph.cpp  Graph.h  Graphics.cpp  Graphics.h  LinePlanning.cpp  LinePlanning.h  PathPattern.cpp  PathPattern.h  README.md  Solver.cpp  Solver.h  SolverLib.h  SpecializedTD.cpp  SpecializedTD.h  TD_ring_experiment.cpp  TreeDecomposition.cpp  TreeDecomposition.h  TreeSolver.cpp  TreeSolver.h  install  main.cpp  main_TD_util.cpp  util.h
PACE2017-TrackA-master/: CMakeLists.txt  batch  tw-exact
TW2ILP/: PathPattern.h  Solver.cpp  Solver.h  Solver2.cpp  Solver2.h  main.cpp
example-data/: .gitignore
example-data/grid/basis/: Config.cnf  Load.giv  Private-Config.cnf
example-data/toy/basis/: Config.cnf  Private-Config.cnf
old/: DataParser.cpp  DataParser.h
openlintim-core-cpp/: .editorconfig
openlintim-core-cpp/include/: core.hpp
openlintim-core-cpp/include/exception/: AlgorithmInfeasibleParameterSettingException.hpp  AlgorithmStoppingCriterionException.hpp  ConfigKeyNotFoundException.hpp  ConfigNoFileNameGivenException.hpp  ConfigTypeMismatchException.hpp  DataIllegalActivityTypeException.hpp  DataIllegalEventTypeException.hpp  DataIllegalLineDirectionException.hpp  DataIndexNotFoundException.hpp  GraphEdgeIdMultiplyAssignedException.hpp  GraphIncidentNodeNotFoundException.hpp  GraphNodeIdMultiplyAssignedException.hpp  IndexOutOfBoundsException.hpp  InputFileException.hpp  InputFormatException.hpp  InputTypeInconsistencyException.hpp  LineCircleException.hpp  LineLinkNotAddableException.hpp  OutputFileException.hpp  StatisticKeyNotFoundException.hpp  StatisticTypeMismatchException.hpp  exceptions.hpp
openlintim-core-cpp/include/io/: AperiodicEANReader.hpp  AperiodicEANWriter.hpp  ConfigReader.hpp  CsvReader.hpp  CsvWriter.hpp  DemandReader.hpp  LinePoolReader.hpp  LineWriter.hpp  ODReader.hpp  ODWriter.hpp  PTNReader.hpp  PTNWriter.hpp  PeriodicEANReader.hpp  PeriodicEANWriter.hpp  PeriodicTimetableWriter.hpp  StatisticReader.hpp  StatisticWriter.hpp
openlintim-core-cpp/include/model/: ActivityType.hpp  AperiodicActivity.hpp  AperiodicEvent.hpp  DemandPoint.hpp  Edge.hpp  EventType.hpp  Graph.hpp  Line.hpp  LineDirection.hpp  LinePool.hpp  Link.hpp  Node.hpp  OD.hpp  ODPair.hpp  Path.hpp  PeriodicActivity.hpp  PeriodicEvent.hpp  Stop.hpp
openlintim-core-cpp/include/model/impl/: AdjacencyListGraph.hpp  DoubleLinkedListPath.hpp  FullOD.hpp  SparseOD.hpp
openlintim-core-cpp/include/util/: LogLevel.hpp  SolverType.hpp  Statistic.hpp  config.hpp
test/: CoupledPP.h  test.cpp
